--- a/index.html
+++ b/index.html
@@ -643,11 +643,11 @@
                     <div class="progress-fill" id="progressFill" style="width: 0%"></div>
                 </div>
                 <div class="progress-text">
-                    <span id="updatedCount">0</span> of 260 schools have contributor data
+                    <span id="updatedCount">0</span> of 260 schools have been updated by contributors
                 </div>
             </div>
             <div class="contribution-cta">
-                Help complete the database - press <strong>CONTRIBUTE INFO</strong> on schools you know
+                Do you have info on any Dubai school? Search by name and by press <strong>CONTRIBUTE INFO</strong> to help build an accurate database
             </div>
         </div>
 
