--- a/index.html
+++ b/index.html
@@ -620,7 +620,9 @@
         <div class="info-grid">
             <div class="info-section-large">
                 <h2 class="section-title-large">By parents, for parents</h2>
-                <p>Information is provided by families and educators by pressing the <strong>CONTRIBUTE INFO</strong> button on each listing. This is a free crowdsourced project, for parents by parents. Know a school? Share what you know for the benefit of all families.</p>
+                <p>Information is provided by families and educators by pressing the <strong>CONTRIBUTE INFO</strong> button on each listing.</p>
+                    <p>This is a free crowdsourced project, for parents by parents.</p>
+                         <p>Know a school? Share what you know for the benefit of all families.</p>
                 <p class="disclaimer">Mistakes can be made, always double check the info at the source.</p>
             </div>
             
