--- a/index.html
+++ b/index.html
@@ -619,11 +619,11 @@
 
         <div class="info-grid">
             <div class="info-section-large">
-                <h2 class="section-title-large">By parents, for parents</h2>
+                <h2 class="section-title-large">For parents, by parents</h2>
                 <p>Information is provided by families and educators by pressing the <strong>CONTRIBUTE INFO</strong> button on each listing.</p>
-                    <p>This is a free crowdsourced project, for parents by parents.</p>
+                    <h3 class="section-title-small">This is a free crowdsourced project, for parents by parents.</h3>
                          <p>Know a school? Share what you know for the benefit of all families.</p>
-                <p class="disclaimer">Mistakes can be made, always double check the info at the source.</p>
+                <p class="disclaimer">Mistakes can be made, always double check info at the source.</p>
             </div>
             
             <div class="info-section-sidebar">
