--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         .disclaimer {
             font-style: italic;
             color: #525252;
-            font-weight: 400 !important;
+            font-weight: 200 !important;
         }
 
         .coming-soon-badge {
@@ -608,21 +608,20 @@
             <h1>Dubai ECC Finder</h1>
             <p class="subtitle">Search Early Childhood Centres in Dubai by location and age range.</p>
             <div class="next-update">
-                <strong>Coming soon:</strong>
+                <strong>Help build the next two search filters:</strong>
                 <ul>
                     <li>Search by curriculum</li>
                     <li>Search by FS1 and FS2 availability</li>
                 </ul>
-                <p>Know a school? Help build these features by pressing the <strong>CONTRIBUTE INFO</strong> button on any listing.</p>
+                <p>Search the name of the schools you know, press the <strong>CONTRIBUTE INFO</strong> button to update their info</p>
             </div>
         </div>
 
         <div class="info-grid">
             <div class="info-section-large">
-                <h2 class="section-title-large">For parents, by parents</h2>
+                <h2 class="section-title-large">A free crowdsourced project, for parents by parents.</h2>
                 <p>Information is provided by families and educators by pressing the <strong>CONTRIBUTE INFO</strong> button on each listing.</p>
-                    <h3 class="section-title-small">This is a free crowdsourced project, for parents by parents.</h3>
-                         <p>Know a school? Share what you know for the benefit of all families.</p>
+                    <h3 class="section-title-small">Collaborate by sharing your knowledge for the benefit of other families</h3>
                 <p class="disclaimer">Mistakes can be made, always double check info at the source.</p>
             </div>
             
